--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "fastapi[standard] (>=0.129.2,<0.130.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+package-mode = false
